Finalise web design 19JAN2018 Step10

--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
   </head>
   <body>
     <div>
-      <h1>Discover hidden places in the world around you</h1>
-    <p class="link"><a target="_self">Download Excursion (Coming soon)</a></p>
+      <h1 class="header">Discover hidden places in the world around you</h1>
+      <p class="link"><a target="_self">Download Excursion (Coming soon)</a></p>
+      <video src="/Users/YiYiChen/Documents/Projects/excursion/resources/video/excursion.mp4">
+        Video not supported
+      </video>
+    </div>
 
-  </div>
+    <div>
+      <h2 class="header">Your personal travel guide</h2>
+      <p class="introduction">Excursion remembers places you like, and recommends new points of interests around you.</p>
+      <img src="/Users/YiYiChen/Documents/Projects/excursion/resources/images/camp.jpg" />
+      <p><img src="/Users/YiYiChen/Documents/Projects/excursion/resources/images/phone.png" /></p>
+      <h2 class="header">Coming soon for iPhone and Andriod</h2>
+      <p class="link"><a target="_self">Download Excursion (Coming soon)</a></p>
+    </div>
 
+    <div>
+      <p class="caption">© Excursion </p>
+    </div>
   </body>
 </html>
