--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div>
       <h1 class="header">Discover hidden places in the world around you</h1>
       <p class="link"><a target="_self">Download Excursion (Coming soon)</a></p>
-      <video src="/Users/YiYiChen/Documents/Projects/excursion/resources/video/excursion.mp4">
+      <video src="/Users/YiYiChen/Documents/Projects/excursion/resources/video/excursion.mp4" width="404" height="720" autoplay="autoplay" loop="loop">
         Video not supported
       </video>
     </div>
