--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <title>Excursion the App</title>
-    <link href="./css/style.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div>
       <h1 class="header">Discover hidden places in the world around you</h1>
       <p class="link"><a target="_self">Download Excursion (Coming soon)</a></p>
-      <video src="/Users/YiYiChen/Documents/Projects/excursion/resources/video/excursion.mp4" width="404" height="720" autoplay="autoplay" loop="loop">
+      <video autoplay muted loop>
+        <source src="resources/video/excursion.mp4" type="video/mp4">
         Video not supported
       </video>
     </div>
@@ -16,14 +17,14 @@
     <div>
       <h2 class="header">Your personal travel guide</h2>
       <p class="introduction">Excursion remembers places you like, and recommends new points of interests around you.</p>
-      <img src="/Users/YiYiChen/Documents/Projects/excursion/resources/images/camp.jpg" />
-      <p><img src="/Users/YiYiChen/Documents/Projects/excursion/resources/images/phone.png" /></p>
+      <p><img src="resources/images/camp.jpg" /></p>
+      <p><img src="resources/images/phone.png" /></p>
       <h2 class="header">Coming soon for iPhone and Andriod</h2>
       <p class="link"><a target="_self">Download Excursion (Coming soon)</a></p>
     </div>
 
     <div>
-      <p class="caption">© Excursion </p>
+      <p class="footer">© Excursion </p>
     </div>
   </body>
 </html>
